--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
 
         <h1>Root Dictionary</h1>
-        <p>By: Sebastian Alarcon Pinnow, Class: Ms. Goldberg, Period: ELA</p>
+        <p>By: Sebastian Alarcon Pinnow, Class: Ms. Goldberg, Period: 1</p>
         <br>
         <br>
         <p>A small Dictionary of words and definitions using the roots hydr, thermo, neo, graph, and ology.</p>
@@ -152,6 +152,13 @@
                 <td>The branch of medicine that deals with diagnosis and treatment of diseases of the ear, nose, and throat. Also called otorhinolaryngology.</td>
             </tr>
         </table>
+        <br>
+        <hr class="rounded">
+        <br>
+        <h1>Word History Paragraph:</h1>
+        <p>By: Sebastian Alarcon Pinnow</p>
+        <br>
+        <p></p>
     </body>
 
 </html>
