--- a/index.html
+++ b/index.html
@@ -155,10 +155,24 @@
         <br>
         <hr class="rounded">
         <br>
-        <h1>Word History Paragraph:</h1>
+        <h1>Word History Paragraphs:</h1>
         <p>By: Sebastian Alarcon Pinnow</p>
         <br>
-        <p></p>
+        <h3>Hydrocephalus paragraph:</h3>
+        <h5></h5>
+        <br>
+        <h3>Neoclassicists Paragraph:</h3>
+        <h5></h5>
+        <br>
+        <h3>Graphitize Paragraph:</h3>
+        <h5></h5>
+        <br>
+        <h3>Thermojunction Paragraph:</h3>
+        <h5></h5>
+        <br>
+        <h3>Otolaryngology Paragraph:</h3>
+        <h5></h5>
+        <hr class="rounded">
     </body>
 
 </html>
